--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "re-panza-brain",
   "version": "1.0.0",
+  "main": "api/index.js",
   "dependencies": {
-    "axios": "^1.6.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "groq-sdk": "^0.12.0",
+    "express": "^4.18.2",
+    "cors": "^2.8.5"
   }
 }
