--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "api/index.js",
   "dependencies": {
     "groq-sdk": "^0.12.0",
+    "axios": "^1.6.0"
     "express": "^4.18.2",
     "cors": "^2.8.5"
   }
 }
+
