--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
   "name": "re-panza-brain",
   "version": "1.0.0",
-  "main": "api/index.js",
   "dependencies": {
-    "groq-sdk": "^0.12.0",
-    "axios": "^1.6.0",
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "axios": "^1.6.0"
   }
 }
